--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap"
         rel="stylesheet">
     <title>Your Recipe App</title>
+
 </head>
 
 <body>
@@ -23,7 +24,7 @@
             </div>
             <div>
                 <a href="#">Create</a>
-                <a href="#">Recipes</a>
+                <a href="#recipes">Recipes</a>
             </div>
         </nav>
     </header>
@@ -45,23 +46,25 @@
                             <option value="entry">Entry</option>
                             <option value="lunch">Lunch</option>
                             <option value="dinner">Dinner</option>
-                            <option value="desert">Desert</option>
+                            <option value="dessert">Dessert</option>
                             <option value="other">Other</option>
                         </select>
                     </div>
                     <div>
-                        <label for="ingredient">Ingredients :</label>
-                        <input type="text" id="ingredient" placeholder="Enter the ingredients here">
+                        <label for="ingredients">Ingredients :</label>
+                        <textarea name="ingredients" id="ingredients" rows="7"
+                            placeholder="Enter the ingredients here"></textarea>
                     </div>
                     <div>
                         <label for="instructions">Instructions :</label>
-                        <input type="text" id="instructions" placeholder="Enter the instructions step by step here">
+                        <textarea name="instructions" id="instructions" rows="7"
+                            placeholder="Enter the instructions step by step here"></textarea>
                     </div>
                     <button>Create Recipe</button>
                 </form>
             </div>
         </section>
-        <section>
+        <section id="recipes">
             <h2>Look through your recipes here</h2>
             <article>
                 <div class="articletop">
