JS 1st working version, ID problem

--- a/index.html
+++ b/index.html
@@ -58,11 +58,14 @@
                             placeholder="Enter the instructions step by step here"></textarea>
                     </div>
                     <button type="submit" id="create">Create Recipe</button>
+                    <button class="hide" type="submit" id="update">Uptade Recipe</button>
                 </form>
             </div>
         </section>
-        <section id="recipes">
+        <section>
             <h2>Look through your recipes here</h2>
+            <div id="recipes">
+            </div>
         </section>
     </main>
 
