add footer & prototype

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
                 <a href="#">Your Recipe App</a>
             </div>
             <div>
-                <a href="#">Create</a>
-                <a href="#">Recipes</a>
+                <a href="#createrecipe">Create</a>
+                <a href="#recipes">Recipes</a>
             </div>
         </nav>
     </header>
     <main>
-        <section>
+        <section id="createrecipe">
             <div class="container">
                 <h1>Your Recipe App</h1>
                 <p>Keep all your favorites recipes easily</p>
@@ -68,7 +68,15 @@
             </div>
         </section>
     </main>
-
+    <footer>
+        <div>
+            <a href="#">Your Recipe App</a>
+        </div>
+        <div>
+            <a href="#createrecipe">Create</a>
+            <a href="#recipes">Recipes</a>
+        </div>
+    </footer>
     <script src="./assets/main.js"></script>
 </body>
 
