fix textarea, reposition recipes link

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
             <div>
                 <a href="#createrecipe">Create</a>
-                <a href="#recipes">Recipes</a>
+                <a href="#look">Recipes</a>
             </div>
         </nav>
     </header>
@@ -62,7 +62,7 @@
                 </form>
             </div>
         </section>
-        <section>
+        <section id="look">
             <h2>Look through your recipes here</h2>
             <div id="recipes">
             </div>
@@ -74,7 +74,7 @@
         </div>
         <div>
             <a href="#createrecipe">Create</a>
-            <a href="#recipes">Recipes</a>
+            <a href="#look">Recipes</a>
         </div>
     </footer>
     <script src="./assets/main.js"></script>
