html linked button

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                         <textarea name="instructions" id="instructions" rows="7"
                             placeholder="Enter the instructions step by step here"></textarea>
                     </div>
-                    <button type="submit" id="create">Create Recipe</button>
-                    <button class="hide" type="submit" id="update">Uptade Recipe</button>
+                    <a href="#look"><button type="submit" id="create">Create Recipe</button></a>
+                    <a href="#look"><button class="hide" type="submit" id="update">Uptade Recipe</button></a>
                 </form>
             </div>
         </section>
