location onclick createbutton, upgrade project done

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="container">
                 <h1>Your Recipe App</h1>
                 <p>Keep all your favorites recipes easily</p>
-                <form id="form" action="">
+                <form id="form" action="#look">
                     <div>
                         <label for="name">Recipe's Name :</label>
                         <input id="name" name="name" type="text" placeholder="Enter the recipe's name here">
@@ -57,8 +57,8 @@
                         <textarea name="instructions" id="instructions" rows="7"
                             placeholder="Enter the instructions step by step here"></textarea>
                     </div>
-                    <a href="#look"><button type="submit" id="create">Create Recipe</button></a>
-                    <a href="#look"><button class="hide" type="submit" id="update">Uptade Recipe</button></a>
+                    <button type="submit" id="create">Create Recipe</button>
+                    <button type="submit" class="hide" id="update">Update Recipe</button>
                 </form>
             </div>
         </section>
