--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
             <a href="#look">Recipes</a>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./assets/main.js"></script>
 </body>
 
